--- a/ClayAddressInfoViewer/packages.config
+++ b/ClayAddressInfoViewer/packages.config
@@ -2,14 +2,16 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="4.0.0-alpha6" targetFramework="net452" />
+  <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.9.8" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights" version="2.4.0-beta4" targetFramework="net452" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0-beta5" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.0-beta4" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.0-beta4" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.4.0-beta4" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.0-beta4" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0-beta4" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.0-beta5" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.0-beta5" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.0-beta5" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.0-beta5" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0-beta5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0-preview2" targetFramework="net452" />
